Added recent notebooks

--- a/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb
@@ -254,7 +254,7 @@
     "loss_val = None\n",
     "loss_progression: list = list()\n",
     "\n",
-    "for epoch in (pbar := tqdm(range(0, 15), desc=f'Training Loop (0) -- Loss: {loss_val}')):\n",
+    "for epoch in (pbar := tqdm(range(0, 3), desc=f'Training Loop (0) -- Loss: {loss_val}')):\n",
     "    \n",
     "    for train_loader in train_data_loaders:\n",
     "        \n",
@@ -309,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_combined_data_df(dataset_container: MachineDatasetContainer, save_to_file: bool = True) -> pd.DataFrame:\n",
+    "def get_combined_data_df(dataset_container: MachineDatasetContainer, save_to_file: bool = True, is_training: bool = True) -> pd.DataFrame:\n",
     "    model.eval()\n",
     "    prediction_list: List[pd.DataFrame] = list()\n",
     "    actual_data_list: List[pd.DataFrame] = list()\n",
@@ -373,7 +373,8 @@
     "    combined_df = combine_dataframes(prediction_df, actual_data_df, plan_df)\n",
     "\n",
     "    if save_to_file and yaml_config['evaluation_path']['save_to_file']:\n",
-    "        combined_df.to_csv(yaml_config['evaluation_path']['training_prediction_path'])   \n",
+    "        prediction_path = 'training_prediction_path' if is_training else 'test_prediction_path'\n",
+    "        combined_df.to_csv(yaml_config['evaluation_path'][prediction_path])   \n",
     "        \n",
     "    del prediction_list, actual_data_list, plan_data_list\n",
     "    \n",
@@ -397,6 +398,24 @@
    "outputs": [],
    "source": [
     "train_combined_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_combined_df = get_combined_data_df(test_dataset, is_training=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_combined_df"
    ]
   }
  ],
