Adding and refactoring code

--- a/cluster-trace-gpu-v2020/prediction/lstm_timestamp_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_timestamp_prediction.ipynb
@@ -8,10 +8,14 @@
    "source": [
     "from lstm_models import LSTM, UtilizationLSTM\n",
     "from gpu_dataloader import ForecastDataset, UtilizationDataset\n",
-    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
     "import torch.nn as nn\n",
     "import torch\n",
     "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "from typing import List\n",
+    "\n",
+    "\n",
     "\n",
     "# plotting the data\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,9 +26,10 @@
     "from utils import get_device\n",
     "\n",
     "import numpy as np\n",
-    "%matplotlib inline\n",
+    "from utils import get_device_as_string, get_device, get_rmse, get_mae\n",
     "\n",
-    "from utils import get_device_as_string, get_device, get_rmse, get_mae"
+    "import yaml\n",
+    "from yaml.loader import SafeLoader"
    ]
   },
   {
@@ -33,9 +38,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import yaml\n",
-    "from yaml.loader import SafeLoader\n",
-    "\n",
     "# Open the file and load the file\n",
     "with open('./model_configs/tasks_vs_no_tasks/utilization_no_tasks.yaml') as f:\n",
     "    yaml_config = yaml.load(f, Loader=SafeLoader)\n",
@@ -59,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = UtilizationDataset(small_df=small_df, include_tasks=include_tasks)\n",
+    "dataset = UtilizationDataset(is_training=True, small_df=small_df, include_tasks=include_tasks)\n",
     "test_set = UtilizationDataset(is_training=False, small_df=small_df, include_tasks=include_tasks)"
    ]
   },
@@ -75,13 +77,11 @@
     "# number of features\n",
     "input_size: int = dataset.X.shape[2]\n",
     "# number of features in hidden state\n",
-    "# hidden_size: int = dataset.X.shape[2] * 1000\n",
     "hidden_size: int = yaml_config['model']['hidden_size']\n",
     "# number of stacked lstm layers\n",
     "num_layers: int = yaml_config['model']['num_layers']\n",
     "# number of output classes\n",
     "num_classes: int = dataset.y.shape[1]\n",
-    "seq_length: int = dataset.X.shape[1]\n",
     "\n",
     "device = get_device()\n",
     "\n",
@@ -129,14 +129,14 @@
    "outputs": [],
    "source": [
     "# lstm = LSTM(num_classes, input_size, hidden_size, num_layers, seq_length, bidirectional=bidirectional)\n",
-    "lstm = UtilizationLSTM(num_classes, input_size, hidden_size, num_layers)\n",
-    "lstm.train()\n",
+    "model = UtilizationLSTM(num_classes, input_size, hidden_size, num_layers)\n",
+    "model.train()\n",
     "\n",
     "# log gradients and model parameters\n",
     "if INCLUDE_WANDB:\n",
-    "    wandb.watch(lstm)\n",
+    "    wandb.watch(model)\n",
     "\n",
-    "lstm"
+    "model"
    ]
   },
   {
@@ -148,16 +148,18 @@
     "# mean square error for regression\n",
     "# nn.\n",
     "criterion = nn.MSELoss()\n",
-    "criterion = criterion.to(device)\n",
     "# criterion = RMSELoss()\n",
-    "# criterion = criterion.to(device)\n",
+    "criterion = criterion.to(device)\n",
     "# optimizer function\n",
-    "optimizer = torch.optim.AdamW(lstm.parameters(), lr=learning_rate)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)\n",
     "\n",
     "scheduler_config = yaml_config['model']['scheduler']\n",
+    "patience = scheduler_config['patience']\n",
+    "factor = scheduler_config['factor']\n",
+    "min_lr = scheduler_config['min_lr']\n",
+    "eps = scheduler_config['eps']\n",
     "\n",
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(\n",
-    "    optimizer, patience=scheduler_config['patience'], factor=scheduler_config['factor'], min_lr=scheduler_config['min_lr'], eps=scheduler_config['eps'])\n"
+    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, patience=patience, factor=factor, min_lr=min_lr, eps=eps)\n"
    ]
   },
   {
@@ -181,8 +183,7 @@
     "        RMSE_TRAINING: rmse,\n",
     "        MAE_TRAINING: mae,\n",
     "    }\n",
-    "    wandb.log(log_dict)\n",
-    "    # print(log_dict)"
+    "    wandb.log(log_dict)"
    ]
   },
   {
@@ -236,18 +237,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for epoch in (pbar := tqdm(range(0, num_epochs), desc=f'Training Loop (0) -- Loss: {loss_val}')):\n",
-    "\n",
-    "    # if epoch % modulo_switch == modulo_switch - 1:\n",
-    "    #     reorder_dataset(dataset, batch_size // 2)\n",
-    "    #     train_loader = DataLoader(dataset, batch_size=batch_size, shuffle=False, num_workers=8)\n",
-    "    \n",
+    "def training_loop(train_loader: DataLoader) -> float:\n",
+    "    predictions, labels, loss = 0, 0, 0\n",
     "    for _, (inputs, labels) in enumerate(train_loader):\n",
     "        # send input and label to device\n",
     "        inputs, labels = inputs.to(device), labels.to(device)\n",
     "        \n",
     "        # forward input to model\n",
-    "        predictions = lstm(inputs).to(device)\n",
+    "        predictions = model(inputs).to(device)\n",
     "\n",
     "        optimizer.zero_grad()\n",
     "        loss = criterion(predictions, labels)\n",
@@ -256,18 +253,42 @@
     "        # update weights\n",
     "        optimizer.step()\n",
     "        \n",
-    "        \n",
     "    if INCLUDE_WANDB:\n",
     "        log_training_metrics(predictions, labels, loss)\n",
-    "    loss_val = loss.item()\n",
+    "        \n",
+    "    return loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validation_loop():\n",
+    "    with torch.no_grad():\n",
+    "        val_pred = model(test_set.X.to(device))\n",
+    "        val_loss = criterion(val_pred, test_set.y.to(device))\n",
+    "        scheduler.step(val_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in (pbar := tqdm(range(0, num_epochs), desc=f'Training Loop (0) -- Loss: {loss_val}')):\n",
+    "\n",
+    "    # if epoch % modulo_switch == modulo_switch - 1:\n",
+    "    #     reorder_dataset(dataset, batch_size // 2)\n",
+    "    #     train_loader = DataLoader(dataset, batch_size=batch_size, shuffle=False, num_workers=8)\n",
+    "    \n",
+    "    loss_val = training_loop(train_loader)\n",
     "    loss_progression.append(loss_val)\n",
     "    pbar.set_description(f'Training Loop ({epoch + 1}) -- Loss: {loss_val:.5f}')\n",
     "    \n",
-    "    with torch.no_grad():\n",
-    "        val_pred = lstm(test_set.X.to(device))\n",
-    "        val_loss = criterion(val_pred, test_set.y.to(device))\n",
-    "        scheduler.step(val_loss)\n",
-    "        \n"
+    "    validation_loop()"
    ]
   },
   {
@@ -305,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lstm.eval()\n",
+    "model.eval()\n",
     "\n",
     "if yaml_config['model']['save_model']:\n",
     "    model_name = f'models/epochs-{num_epochs}-{current_time}'\n",
@@ -317,10 +338,8 @@
     "            'hidden_size': hidden_size,\n",
     "            'num_layers': num_layers,\n",
     "            'num_classes': num_classes,\n",
-    "            'seq_length': seq_length,\n",
-    "            'model_state_dict': lstm.state_dict(),\n",
+    "            'model_state_dict': model.state_dict(),\n",
     "            'optimizer_state_dict': optimizer.state_dict(),\n",
-    "            \n",
     "        },\n",
     "        f'{model_name}'\n",
     "    )\n"
@@ -332,18 +351,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "def get_combined_data_df(data_set: UtilizationDataset, save_to_file: bool = True, is_training: bool = True) -> pd.DataFrame:\n",
+    "    model.eval()\n",
+    "        \n",
+    "    X_df = data_set.X.to(device)\n",
+    "    label_columns: List[str] = dataset.get_label_columns()\n",
+    "    \n",
+    "    def get_prediction_df() -> pd.DataFrame:\n",
+    "        prediction = model(X_df)\n",
+    "        if torch.has_cuda:\n",
+    "            prediction = prediction.cpu().detach().numpy()\n",
+    "        else:\n",
+    "            prediction = prediction.data.numpy()\n",
+    "            \n",
+    "        prediction_df = pd.DataFrame(prediction, columns=label_columns)\n",
+    "        prediction_df = data_set.y_scaler.inverse_normalization_df(prediction_df)\n",
+    "        \n",
+    "        return prediction_df\n",
+    "    \n",
+    "    def get_actual_data_df() -> pd.DataFrame:\n",
+    "        actual_data = data_set.y.data.numpy()\n",
+    "        actual_data_df = pd.DataFrame(actual_data, columns=label_columns)\n",
+    "        actual_data_df = data_set.y_scaler.inverse_normalization_df(actual_data_df)\n",
+    "        \n",
+    "        return actual_data_df\n",
+    "    \n",
+    "    def get_plan_data_df() -> pd.DataFrame:\n",
+    "        plan = data_set.X.cpu()\n",
+    "        plan_df = dataset.X_scaler.convert_tensor_to_df(plan)\n",
+    "        plan_df = dataset.X_scaler.inverse_standardize_df(plan_df)\n",
+    "        plan_df = plan_df[['plan_cpu', 'plan_mem']]\n",
+    "        return plan_df\n",
+    "    \n",
+    "    prediction_df = get_prediction_df()\n",
+    "    actual_data_df = get_actual_data_df()\n",
+    "    plan_df = get_plan_data_df()\n",
+    "    \n",
+    "    return pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X_df = dataset.X\n",
     "X_df = X_df.to(device)\n",
     "# forward pass\n",
-    "prediction = lstm(X_df)\n",
-    "# prediction = prediction.reshape(1, -1)\n",
+    "prediction = model(X_df)\n",
     "if torch.has_cuda:\n",
     "    prediction = prediction.cpu().detach().numpy()\n",
     "else:\n",
     "    prediction = prediction.data.numpy()\n",
     "\n",
     "actual_data = dataset.y.data.numpy()\n",
-    "label_columns = dataset._get_label_columns()\n",
+    "label_columns = dataset.get_label_columns()\n",
     "\n",
     "# create dataframes\n",
     "prediction_df = pd.DataFrame(prediction, columns=label_columns)\n",
@@ -374,8 +438,8 @@
    "source": [
     "\n",
     "rename_columns_dict: dict = {\n",
-    "    'cpu_usage_x': 'actual cpu usage', \n",
-    "    'cpu_usage_y': 'predicted cpu usage', \n",
+    "    'cpu_usage_x': 'actual cpu usage',\n",
+    "    'cpu_usage_y': 'predicted cpu usage',\n",
     "    'plan_cpu': 'allocated cpu',\n",
     "    'avg_mem_x': 'actual mem usage',\n",
     "    'avg_mem_y': 'predicted mem usage',\n",
@@ -520,12 +584,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lstm.eval()\n",
+    "model.eval()\n",
     "\n",
     "X_df = test_set.X\n",
     "X_df = X_df.to(device)\n",
     "# forward pass\n",
-    "prediction = lstm(X_df)\n",
+    "prediction = model(X_df)\n",
     "if get_device_as_string() == 'cuda' or get_device_as_string() == 'mps':\n",
     "    prediction = prediction.cpu().data.numpy()\n",
     "else:\n",
