Refactored jupyter notebook for timestamp predictions

--- a/cluster-trace-gpu-v2020/prediction/lstm_timestamp_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_timestamp_prediction.ipynb
@@ -15,8 +15,6 @@
     "\n",
     "from typing import List\n",
     "\n",
-    "\n",
-    "\n",
     "# plotting the data\n",
     "import matplotlib.pyplot as plt\n",
     "# used for the dataframes\n",
@@ -351,7 +349,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def get_combined_data_df(data_set: UtilizationDataset, save_to_file: bool = True, is_training: bool = True) -> pd.DataFrame:\n",
     "    model.eval()\n",
     "        \n",
@@ -388,175 +385,26 @@
     "    actual_data_df = get_actual_data_df()\n",
     "    plan_df = get_plan_data_df()\n",
     "    \n",
-    "    return pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_df = dataset.X\n",
-    "X_df = X_df.to(device)\n",
-    "# forward pass\n",
-    "prediction = model(X_df)\n",
-    "if torch.has_cuda:\n",
-    "    prediction = prediction.cpu().detach().numpy()\n",
-    "else:\n",
-    "    prediction = prediction.data.numpy()\n",
-    "\n",
-    "actual_data = dataset.y.data.numpy()\n",
-    "label_columns = dataset.get_label_columns()\n",
-    "\n",
-    "# create dataframes\n",
-    "prediction_df = pd.DataFrame(prediction, columns=label_columns)\n",
-    "actual_data_df = pd.DataFrame(actual_data, columns=label_columns)\n",
-    "\n",
-    "# reverse transformation\n",
-    "prediction_df = dataset.y_scaler.inverse_normalization_df(prediction_df)\n",
-    "actual_data_df = dataset.y_scaler.inverse_normalization_df(actual_data_df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plan = X_df.cpu()\n",
-    "plan_df = dataset.X_scaler.convert_tensor_to_df(plan)\n",
-    "plan_df = dataset.X_scaler.inverse_standardize_df(plan_df)\n",
-    "plan_df = plan_df[['plan_cpu', 'plan_mem']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "rename_columns_dict: dict = {\n",
-    "    'cpu_usage_x': 'actual cpu usage',\n",
-    "    'cpu_usage_y': 'predicted cpu usage',\n",
-    "    'plan_cpu': 'allocated cpu',\n",
-    "    'avg_mem_x': 'actual mem usage',\n",
-    "    'avg_mem_y': 'predicted mem usage',\n",
-    "    'plan_mem': 'allocated mem'\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Calculate Root Mean Squared Error\n",
-    "\n",
-    "Calculating the RMSE for the overall prediction of the (training) dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rmse_key: str = 'Root Mean Squared Error (Overall - Training)'\n",
-    "rmse_result = get_rmse(actual_data_df[:], prediction_df[:])\n",
-    "print(f'Test Score: {rmse_result:.2f} RMSE')\n",
-    "if INCLUDE_WANDB:\n",
-    "    wandb.summary[rmse_key] = rmse_result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Calculate Mean Absolute Error\n",
-    "\n",
-    "Calcutlate the MAE for the overall prediction of the (training) dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mae_key: str = 'Mean Absolute Error (Overall - Training)'\n",
-    "mae_result = mean_absolute_error(actual_data_df[:], prediction_df[:])\n",
-    "print(f'Test Score: {mae_result} MAE')\n",
-    "\n",
-    "if INCLUDE_WANDB:\n",
-    "    wandb.summary[mae_key] = mae_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combined_df = pd.merge(actual_data_df, prediction_df, left_index=True, right_index=True)\n",
-    "# combined_df.rename()\n",
-    "combined_df[['plan_cpu', 'plan_mem']] = plan_df\n",
-    "\n",
-    "combined_df = combined_df.rename(columns=rename_columns_dict)\n",
-    "\n",
-    "combined_df['rmse'] = rmse_result\n",
-    "combined_df['mae'] = mae_result\n",
-    "\n",
-    "if yaml_config['evaluation_path']['save_to_file']:\n",
-    "    combined_df.to_csv(yaml_config['evaluation_path']['training_prediction_path'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_column(actual_values=actual_data_df, predicted_values=prediction_df, column_number: int = 0, rmse_threshold: float = 0.30, is_training: bool = True):\n",
-    "\n",
-    "    if len(label_columns) <= column_number:\n",
-    "        print('Out of Prediction Bounds')\n",
-    "        return\n",
-    "\n",
-    "    plt.figure(figsize=(25, 15))  # plotting\n",
-    "    plt.rcParams.update({'font.size': 22})\n",
-    "\n",
-    "    column = label_columns[column_number]\n",
-    "    pred_column = f\"pred_{column}_{'training' if is_training else 'test'}\"\n",
-    "\n",
-    "    rmse = get_rmse(actual_values[column], predicted_values[column])\n",
-    "    mae = mean_absolute_error(actual_values[column], predicted_values[column])\n",
-    "\n",
-    "    predicted_color = 'green' if rmse < rmse_threshold else 'orange'\n",
-    "\n",
-    "    plt.plot(actual_values[column], label=column, color='black')  # actual plot\n",
-    "    plt.plot(predicted_values[column], label='pred_' +\n",
-    "             column, color=predicted_color)  # predicted plot\n",
-    "\n",
-    "    plt.title('Time-Series Prediction')\n",
-    "    plt.plot([], [], ' ', label=f'RMSE: {rmse}')\n",
-    "    plt.plot([], [], ' ', label=f'MAE: {mae}')\n",
-    "    plt.legend()\n",
-    "    plt.ylabel('timeline', fontsize=25)\n",
+    "    rename_columns_dict: dict = {\n",
+    "        'cpu_usage_x': 'actual cpu usage',\n",
+    "        'cpu_usage_y': 'predicted cpu usage',\n",
+    "        'plan_cpu': 'allocated cpu',\n",
+    "        'avg_mem_x': 'actual mem usage',\n",
+    "        'avg_mem_y': 'predicted mem usage',\n",
+    "        'plan_mem': 'allocated mem'\n",
+    "    }\n",
     "    \n",
-    "    if INCLUDE_WANDB:\n",
-    "        wandb.log({pred_column: wandb.Image(plt)})\n",
-    "        wandb.summary[f'Root Mean Squared Error ({column})'] = rmse\n",
-    "        wandb.summary[f'Mean Absolute Error ({column})'] = mae\n",
+    "    combined_df = pd.merge(actual_data_df, prediction_df, left_index=True, right_index=True)\n",
+    "    # combined_df.rename()\n",
+    "    combined_df[['plan_cpu', 'plan_mem']] = plan_df\n",
+    "\n",
+    "    combined_df = combined_df.rename(columns=rename_columns_dict)\n",
+    "    \n",
+    "    if yaml_config['evaluation_path']['save_to_file'] and save_to_file:\n",
+    "        prediction_path: str = 'training_prediction_path' if is_training else 'test_prediction_path'\n",
+    "        combined_df.to_csv(yaml_config['evaluation_path'][prediction_path])\n",
     "        \n",
-    "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## See Predictions on Training Dataset"
+    "    return combined_df"
    ]
   },
   {
@@ -565,17 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for idx in range(0, len(label_columns)):\n",
-    "#     plot_column(actual_values=actual_data_df, predicted_values=prediction_df, column_number=idx)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test Set Analysis\n",
-    "\n",
-    "Below, the test set will be loaded and the model evaluated with it to see the actual performance."
+    "combined_train_df = get_combined_data_df(dataset)"
    ]
   },
   {
@@ -584,86 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.eval()\n",
-    "\n",
-    "X_df = test_set.X\n",
-    "X_df = X_df.to(device)\n",
-    "# forward pass\n",
-    "prediction = model(X_df)\n",
-    "if get_device_as_string() == 'cuda' or get_device_as_string() == 'mps':\n",
-    "    prediction = prediction.cpu().data.numpy()\n",
-    "else:\n",
-    "    prediction = prediction.data.numpy()\n",
-    "\n",
-    "actual_data = test_set.y.data.numpy()\n",
-    "\n",
-    "label_columns = test_set._get_label_columns()\n",
-    "\n",
-    "# create dataframes\n",
-    "prediction_df = pd.DataFrame(prediction, columns=label_columns)\n",
-    "actual_data_df = pd.DataFrame(actual_data, columns=label_columns)\n",
-    "\n",
-    "# reverse transformation\n",
-    "prediction_df = dataset.y_scaler.inverse_normalization_df(prediction_df)\n",
-    "actual_data_df = dataset.y_scaler.inverse_normalization_df(actual_data_df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plan = X_df.cpu()\n",
-    "plan_test_df = test_set.X_scaler.convert_tensor_to_df(plan)\n",
-    "plan_test_df = test_set.X_scaler.inverse_standardize_df(plan_test_df)\n",
-    "plan_test_df = plan_df[['plan_cpu', 'plan_mem']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rmse_key: str = 'Root Mean Squared Error (Overall - Test)'\n",
-    "rmse_result = get_rmse(actual_data_df[:], prediction_df[:])\n",
-    "print(f'Test Score: {rmse_result:.2f} RMSE')\n",
-    "\n",
-    "if INCLUDE_WANDB:\n",
-    "    wandb.summary[rmse_key] = rmse_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mae_key: str = 'Mean Absolute Error (Overall - Test)'\n",
-    "mae_result = mean_absolute_error(actual_data_df[:], prediction_df[:])\n",
-    "print(f'Test Score: {mae_result} MAE')\n",
-    "if INCLUDE_WANDB:\n",
-    "    wandb.summary[mae_key] = mae_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combined_test_df = pd.merge(actual_data_df, prediction_df, left_index=True, right_index=True)\n",
-    "# combined_df.rename()\n",
-    "combined_test_df[['plan_cpu', 'plan_mem']] = plan_test_df \n",
-    "\n",
-    "combined_test_df = combined_test_df.rename(columns=rename_columns_dict)\n",
-    "\n",
-    "combined_test_df['rmse'] = rmse_result\n",
-    "combined_test_df['mae'] = mae_result\n",
-    "\n",
-    "if yaml_config['evaluation_path']['save_to_file']:\n",
-    "    combined_test_df.to_csv(yaml_config['evaluation_path']['test_prediction_path'])"
+    "combined_test_df = get_combined_data_df(test_set)"
    ]
   }
  ],
